# mettle

./: .gitignore  .gitmodules  ARCHES  EXTENSIONS.md  Gemfile  Makefile  Makefile.libdnet  Makefile.libpcap  Makefile.libressl  Makefile.mbedtls  Makefile.mettle  Makefile.tools  README.md  Rakefile  build-all  build_m1.sh  cortex.yaml  darwin_sigar.c  fix_ppc_mettle.sh  genmakefile.py  make-all  metasploit-payloads-mettle.gemspec  metasploit_payloads-mettle.gemspec  test_clipboard_fix.bat  test_clipboard_fix.sh  test_ppc.sh
.github/workflows/: metasploit-framework_acceptance.yml  verify.yml
doc/: stack_requirements.md
docker/: Dockerfile
lib/metasploit-payloads/: mettle.rb
lib/metasploit-payloads/mettle/: version.rb
lib/metasploit_payloads/: mettle.rb
lib/metasploit_payloads/mettle/: error.rb  version.rb
libreflect/: COPYING  Makefile  Makefile.am  configure.ac
libreflect/arch/linux/: armv5b
libreflect/arch/linux/aarch64/: arch_jump.h
libreflect/arch/linux/armv5l/: arch_jump.h
libreflect/arch/linux/i486/: arch_jump.h
libreflect/arch/linux/mips/: arch_jump.h
libreflect/arch/linux/powerpc/: arch_jump.h
libreflect/arch/linux/s390x/: arch_jump.h
libreflect/arch/linux/x86_64/: arch_jump.h
libreflect/examples/: Makefile.am  memfd_exec.c  noexec.c
libreflect/include/: reflect.h  reflect.h.in
libreflect/src/: Makefile.am  exec.c  jump.c  map_elf.c  map_elf.h  map_segment.c  map_segment.h  map_segment_memfd.c  memfd_exec.c  reflect_common.h  stack_setup.c
make/: Makefile.common  Makefile.curl  Makefile.json-c  Makefile.kernel-headers  Makefile.libdnet  Makefile.libeio  Makefile.libev  Makefile.libpcap  Makefile.libreflect  Makefile.libressl  Makefile.libsigar  Makefile.libuv  Makefile.libz  Makefile.linenoise  Makefile.lua  Makefile.mbedtls  Makefile.mettle  Makefile.tools
mettle/: COPYING  Makefile.am  config.update.sh  configure.ac
mettle.xcodeproj/: project.pbxproj
mettle.xcodeproj/xcuserdata/dmohanty.xcuserdatad/xcschemes/: mettle.xcscheme  xcschememanagement.plist
mettle/extensions/: Makefile.am
mettle/extensions/common/: Makefile.am  extension.c  extension.h
mettle/extensions/keylogger/: CallBackFunctions.swift  Keylogger.swift  Makefile.am  README.md  keylogger.c  keylogger.h  main.swift  module.modulemap  swift2mettle.c  swift2mettle.h
mettle/extensions/lua/: Makefile.am  README.md  lua.c  lua.h
mettle/extensions/sniffer/: Makefile.am  README.md  sniffer.c  sniffer.h
mettle/include/: endian.h  stdlib.h  string.h  util.h
mettle/include/compat/: endian.h  err.h  md5.h  pty.h  sha1.h  sha2.h  stdio.h  stdlib.h
mettle/include/compat/arpa/: inet.h
mettle/include/util/: buffer.h  log.h
mettle/m4/: check-libc.m4
mettle/src/: Makefile.am  argv_split.c  argv_split.h  base64.c  base64.h  base_inject.c  base_inject.h  buffer_queue.c  buffer_queue.h  bufferev.c  bufferev.h  c2.c  c2.h  c2_http.c  c2_tcp.c  c2_transports.h  channel.c  channel.h  command_ids.h  console-unsupported.c  console.c  coreapi.c  crypttlv.c  crypttlv.h  eio_rmtree.c  eio_rmtree.h  extension.c  extension.h  extensions.c  extensions.h  http_client.c  http_client.h  inet_ntop.c  json.c  json.h  log.c  log.h  main.c  mbedtls_ext.c  mbedtls_ext.h  (+41 more)
mettle/src/compat/: glob.c  progname.c  setproctitle.c  strlcat.c  strlcpy.c  strtonum.c
mettle/src/stdapi/: stdapi.c
mettle/src/stdapi/audio/: apple_interface.m  apple_mic.m  apple_output.m  interface.c  interface.h  linux_mic.c  linux_output.c  mic.c  mic.h  output.c  output.h  posix_output.c
mettle/src/stdapi/clipboard/: apple_clipboard.m  clipboard.c  clipboard.h  osx_clipboard.m
mettle/src/stdapi/fs/: __fmodeflags.c  file.c
mettle/src/stdapi/net/: channel.c  client.c  config.c  resolve.c  server.c
mettle/src/stdapi/sys/: config.c  linux_process.c  memory.c  memory.h  permission.h  posix_process.c  process.c  process.h
mettle/src/stdapi/ui/: osx_desktop.m  osx_keyboard.m  osx_mouse.m  ui.c  ui.h
mettle/src/stdapi/webcam/: apple_webcam.m  linux_webcam.c  webcam.c  webcam.h
mettle/src/util/: buffer.c  log.c  network_client.c
scripts/make/: Makefile.common  Makefile.curl  Makefile.kernel-headers  Makefile.libev  Makefile.libpcap  Makefile.libressl  Makefile.libuv  Makefile.mettle  Makefile.tools
spec/: spec_helper.rb
spec/metasploit_payloads/mettle/: mettle_spec.rb
util/: elf.h  elf2bin.c  elf2bin32.c  elf2bin64.c  util-common.h
